# cfkv-cli

./: Cargo.toml  PROJECT_SUMMARY.md  README.md  STORAGE_MANAGEMENT.md
.github/workflows/: pr-checks.yml  test-and-release.yml
crates/cfkv/: Cargo.toml
crates/cfkv-blog/: Cargo.toml
crates/cfkv-blog/src/: error.rs  lib.rs  parser.rs  publisher.rs  types.rs
crates/cfkv-cache/: Cargo.toml
crates/cfkv-cache/src/: lib.rs
crates/cfkv-config/: Cargo.toml
crates/cfkv-config/src/: lib.rs
crates/cfkv/src/: cli.rs  config.rs  formatter.rs  main.rs
crates/cloudflare-kv/: Cargo.toml
crates/cloudflare-kv/src/: auth.rs  batch.rs  client.rs  error.rs  lib.rs  plugin.rs  types.rs
docs/: GITHUB_ACTIONS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_KV_DEVELOPMENT.md  README.md  RELEASE_WORKFLOW.md  STORAGE_PERSISTENCE.md
