[package]
name = "cfkv-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cloudflare KV plugin for cache invalidation helpers"

[dependencies]
cloudflare-kv = { path = "../cloudflare-kv" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex = "1.10"
