[package]
name = "cfkv-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cloudflare KV plugin for application configuration management"

[dependencies]
cloudflare-kv = { path = "../cloudflare-kv" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
