[package]
name = "cloudflare-kv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust library for Cloudflare KV operations"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
